# ChangeLog for sys-auth/pam_sotp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Jul 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
  +pam_sotp-0.3.3.ebuild:
  Initial ebuild, Bug 174926
