@@ -1,4 +1,4 @@
 DIST pam_sotp-0.3.3.tar.gz 108487 RMD160 c05667c037991aac948a4d14c4ae6ff76be7de93 SHA1 db3c5f0a6abafc9894d307e3480dce0ad09a01b2 SHA256 0a734c8164bd731041978eed37e0077837adedc68df604d9ab98a13bf891d5e6
 EBUILD pam_sotp-0.3.3.ebuild 1110 RMD160 be9ce2475e84ab190ba35515e589bd7cc6fa53a9 SHA1 9983e48753126be6323140303a79d99ef976237f SHA256 92aa2f3d9c4d9aed65573e44f54f9a4579f44fb3d723cd09ef8243addd39b960
-MISC ChangeLog 233 RMD160 13e13109ceba126e5c0d702ba2ffbf91c48cc1ad SHA1 75ef0cdad7449241d274b2765dd06670c41f1ebc SHA256 9d1d4164a8dbe1ea14a7ac35d7773ee989d80f72984ab3e9f6040db9c9b08121
-MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
+MISC ChangeLog 354 RMD160 50910e901164a8e657070fbdf6c028585068b68e SHA1 9a3f8ce2b11e3eccaa891105eef2e3ebc7a9dac3 SHA256 1eaf243bdf3260a7b3cda6d322af10b78138ed19fc3e6442ada6c872d97e8429
+MISC metadata.xml 289 RMD160 2d0a8b275ddff451b3b3deea2bda8f27bce271d5 SHA1 63f66128844803a6578531b99fd4e795947a2fb9 SHA256 52e6ce16bab58b9e6d253b7bf5320af7b6eb9ba6a38cf83d91c15d8ab353c3e5
