@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>maintainer-wanted</herd>
+	<herd>maintainer-wanted</herd>
+	<use>
+		<flag name='urandom'> Use /dev/urandom for password 
+			generations (faster but less secure) </flag>
+	</use>
 </pkgmetadata>
