@@ -1,6 +1,9 @@
 # ChangeLog for sys-auth/pam_sotp
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Aug 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org> metadata.xml:
+  Add local useflags to metadata.xml (GLEP 56)
 
   12 Jul 2007; Jakub Moc <jakub@gentoo.org> +metadata.xml,
   +pam_sotp-0.3.3.ebuild:
